[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Scene/Trigger/NPCArticleTrigger.gd" type="Script" id=1]
[ext_resource path="res://Picture/Scene/NPCTrigger/NPCArticleTrigger.png" type="Texture" id=2]

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="NPCArticleTrigger" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect1" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="area2D1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collisionShape2D1" type="CollisionShape2D" parent="area2D1"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="textureRect1" to="." method="_on_textureRect1_mouse_entered"]
[connection signal="mouse_exited" from="textureRect1" to="." method="_on_textureRect1_mouse_exited"]
[connection signal="area_entered" from="area2D1" to="." method="_on_area2D1_area_entered"]
[connection signal="area_exited" from="area2D1" to="." method="_on_area2D1_area_exited"]
